--- a/requirements.txt
+++ b/requirements.txt
@@ -22,8 +22,10 @@ pytest==8.3.5
 pytest-flask==1.3.0
 python-dotenv==1.1.0
 pytz==2025.2
+selenium==4.18.1
 SQLAlchemy==2.0.41
 typing_extensions==4.13.2
 Werkzeug==3.1.3
 WTForms==3.2.1
 WTForms-SQLAlchemy==0.4.2
+webdriver-manager==4.0.1
