--- a/nginx_erp.conf
+++ b/nginx_erp.conf
@@ -1,11 +1,12 @@
 server {
     listen 80;
-    server_name 51.254.36.25 erp.declaimers.com;
+    server_name erp.declaimers.com 51.254.36.25;
     
-    # Redirection HTTPS (sera activée après SSL)
-    # return 301 https://$server_name$request_uri;
+    # Logs spécifiques ERP
+    access_log /var/log/nginx/erp_access.log;
+    error_log /var/log/nginx/erp_error.log;
     
-    # Configuration temporaire HTTP
+    # Configuration principale - Proxy vers Flask
     location / {
         proxy_pass http://127.0.0.1:5000;
         proxy_set_header Host $host;
@@ -13,30 +14,32 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # Timeouts
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
+        # Timeouts pour les calculs de présence
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
+        proxy_send_timeout 300;
     }
     
-    # Fichiers statiques
+    # Fichiers statiques ERP
     location /static/ {
         alias /opt/erp/app/app/static/;
         expires 30d;
         add_header Cache-Control "public, immutable";
     }
     
-    # Fichiers de logs
-    access_log /var/log/nginx/erp_access.log;
-    error_log /var/log/nginx/erp_error.log;
+    # API ZKTime.Net (synchronisation pointeuse)
+    location /zkteco/ {
+        proxy_pass http://127.0.0.1:5000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
     
-    # Sécurité
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    
-    # Taille max upload
-    client_max_body_size 50M;
+    # Upload de fichiers
+    location /uploads/ {
+        alias /opt/erp/uploads/;
+        client_max_body_size 10M;
+    }
 }
 
 # Configuration HTTPS (à activer après SSL)
