--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ WeasyPrint==61.2
 # Dépendances Module AI
 # ═══════════════════════════════════════════════════════════════
 prophet==1.1.5
+numpy<2.0  # Fix compatibilité Prophet (np.float_ supprimé dans NumPy 2.0)
 openai>=1.12.0
 groq>=0.3.0
 
