Security: Suppression token en clair + ajout .gitignore
- Remplacement du vrai token par placeholder dans env_production.example.txt
- Ajout CONFIGURATION_PRIVEE*.txt dans .gitignore
- Script de test utilise variable d'environnement pour le token
- Documentation mise à jour avec placeholder
- Les vrais tokens doivent être dans .env (non commité)

--- a/.gitignore
+++ b/.gitignore
@@ -182,6 +182,7 @@ secrets.txt
 *.p12
 tokens.txt
 passwords.txt
+CONFIGURATION_PRIVEE*.txt
 
 # Base de données locales (pointeuse ZKTeco)
 TimeNet.db
